--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,7 +11,7 @@
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: #f39c12;
+    background: #3d6891;
     position: relative;
     display: flex;
     justify-content: center;
@@ -43,7 +43,7 @@
 }
 .login_btn {
     width: 100%;
-    background: #c0392b !important;
+    background: #e7351e !important;
     color: white !important;
 }
 .login_btn:focus {
@@ -54,7 +54,7 @@
     padding: 0 2rem;
 }
 .input-group-text {
-    background: #c0392b !important;
+    background: #e7351e !important;
     color: white !important;
     border: 0 !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
@@ -66,4 +66,7 @@
 }
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #c0392b !important;
+}
+.invalid input{
+    outline: #c0392b !important;
 }
