--- a/src/css/App.css
+++ b/src/css/App.css
@@ -219,6 +219,9 @@ a {
     color: #fff;
     background-color: #1A237E
 }
+.edit-image:hover{
+    cursor: pointer;
+}
 
 @media screen and (max-width: 991px) {
     .logo {
